# topohedral-modeller

./: Cargo.toml  activate.zsh
assets/geo/: bcurve_tests.py  bsurface-tests.json  bsurface_tests.py
docs/src/: developers.md
examples/: viewer_example.rs
src/: lib.rs
src/boxing/: box_bcurve.rs  common.rs  mod.rs
src/common/: mod.rs
src/geometry/: bcurve.rs  bsurface.rs  common.rs  line.rs  mod.rs  plane.rs  test_utils.rs
src/geometry/curve/: bcurve.rs  line.rs  mod.rs
src/geometry/surface/: bsurface.rs  mod.rs  plane.rs
src/mesh/: dcel.rs  mod.rs
src/spatial/: delaunay.rs  mod.rs
src/splines/: mod.rs
src/test_utils/: mod.rs  test_bcurve.rs
src/topology/: mod.rs  schema.rs
src/topology/d3/: bodies_regions_shells.rs
src/utilities/: mod.rs  ndarray.rs
src/viewer/: common.rs  mod.rs  view_bcurve.rs  view_box.rs  view_line.rs  view_plane.rs
