[package]
name = "topohedral-modeller"
version = "0.0.0"
edition = "2021"

[features]
viewer = ["topohedral-viewer"]   

[toolchain]
channel = "nightly"

[dependencies]
nalgebra = "0.32.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
approx = "0.5.1"
criterion = "0.3"
num-traits = "0.2.19"
topohedral-optimisation = {path = "../topohedral-optimisation"} 
topohedral-integrate = {path = "../topohedral-integrate"}
topohedral-viewer = {path = "../topohedral-viewer", optional = true}
topohedral-tracing = {path = "../topohedral-tracing"}
thiserror = "1.0.61"
log = "0.4.21"